--- a/Storia.html
+++ b/Storia.html
@@ -54,7 +54,7 @@ margin-right: auto;
 </head>
 <body>
 <ul>
-<li><a href="NewYork.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="Geografia.html">Geografia</a></li>
 <li><a href="Economia.html">Economia</a></li>
 <li><a href="Storia.html">Storia</a></li>
