--- a/Storia.html
+++ b/Storia.html
@@ -68,7 +68,7 @@ margin-right: auto;
 <p>New York fu fondata nel 1624 dagli olandesi, col nome di Nieuw Amsterdam; il primo insediamento si trovava sulla punta sud dell’isola di Manhattan. Nel 1664 questo insediamento fu conquistato dagli inglesi, che ne cambiarono il nome in New York.
 New York fu occupata dagli inglesi per quasi tutta la durata della guerra d’indipendenza e la città costituì il più importante punto d’appoggio britannico durante la guerra.
 All’inizio del XIX secolo l’importanza del porto di New York fu notevolmente accresciuta dall’apertura del Canale Erie, che collegava la valle dello Hudson con il Lago Erie, e quindi metteva in comunicazione tutta la regione dei Grandi Laghi con la costa atlantica.</p><br>
-<img src="NewYorkVecchia.png" width="594" height="342"><br>
+<img src="/immagini/NewYorkVecchia.png" width="594" height="342"><br>
 <p2>Grazie a questo canale, New York divenne il principale punto di approdo delle merci e degli immigranti provenienti dall’Europa. Molti dei nuovi arrivati si stabilirono in città, e la popolazione di New York crebbe vertiginosamente.
 Tra il 1874 ed il 1898 i confini di New York City (che fino ad allora comprendeva solo Manhattan) furono sostanzialmente ampliati, prima con l’aggiunta del Bronx (parte nel 1874 e parte nel 1895) e poi con quella degli altri tre distretti (1898).
 Per via degli elevatissimi prezzi dei terreni sull’isola di Manhattan, tra gli anni ’20 e gli anni ’30 si cominciarono a costruire edifici sempre più alti, i cosiddetti grattacieli, che costituiscono una delle caratteristiche più famose della città. Il più famoso di questi è probabilmente l’Empire State Building, costruito nel 1931, e che fino al 1973 fu il più alto del mondo.
