--- a/Economia.html
+++ b/Economia.html
@@ -61,6 +61,6 @@ la Chinatown di Manhattan; lo shopping di lusso lungo la Quinta Strada e la Madi
 come il pattinaggio su ghiaccio a Central Park in inverno, il Tribeca Film Festival, sono ulteriori eventi che attirano persone in città.
 Nel 2010, New York ha ricevuto quasi 49 milioni di turisti,record successivamente superato nel 2011 con 50 milioni di visitatori.</p>
 
-<img src="TimesSquare.jpg" width="794" height="342">   
+<img src="/immagini/TimesSquare.jpg" width="794" height="342">   
 </Body>
 </html>
