--- a/Geografia.html
+++ b/Geografia.html
@@ -54,10 +54,10 @@ text-align:center;
 <p>New York si trova alla foce del fiume Hudson, sull'Oceano Atlantico, 
 e comprende 5 distretti. Manhattan, il suo cuore pulsante, è considerato uno dei poli commerciali,
 finanziari e culturali più importanti al mondo. </p>
-<img src="/immagini/NewYork.png" width="394" height="342" style="float:left">         <img src="Newyork3.png" width="394" height="342" style="float:right"><br>
+<img src="/immagini/NewYork.png" width="394" height="342" style="float:left">         <img src="/immagini/Newyork3.png" width="394" height="342" style="float:right"><br>
 <div>I luoghi più caratteristici della metropoli sono i grattacieli come l'Empire State Building e l'estesa 
 zona di Central Park.Il teatro di Broadway è illuminato dai neon di Times Square.</div><br>
-<img src="/immagini/empirestate.jpeg" width="394" height="342" style="float:Right">     <img src="Broadway.jpg" width="394" height="342" style="float:left">
+<img src="/immagini/empirestate.jpeg" width="394" height="342" style="float:Right">     <img src="/immagini/Broadway.jpg" width="394" height="342" style="float:left">
 
 </Body>
 </html>
